# reqsync

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: CONFIG.md  INTEGRATION.md  USAGE.md
docs/assets/: README.md
examples/: api_minimal.py
src/reqsync/: __init__.py  _logging.py  _types.py  api.py  cli.py  config.py  core.py  env.py  errors.py  io.py  mcp_server.py  parse.py  policy.py  report.py
tests/: conftest.py  test_cli.py  test_env.py  test_includes.py  test_integration_basic.py  test_integration_real.py  test_io.py  test_parse.py  test_policy.py
