[build-system]
requires = ["hatchling>=1.25", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "reqsync"
dynamic = ["version"]
description = "Synchronize requirements files to installed versions safely and atomically."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "Roy Dawson IV", email = "Roy.Dawson.IV@gmail.com" }
]
keywords = [
  "pip",
  "requirements",
  "dependencies",
  "automation",
  "venv",
  "packaging",
  "agent",
  "ai-tool",
  "mcp",
  "cli-tool",
  "dependency-management"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Environment :: Console",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
  "Typing :: Typed",
]

dependencies = [
  "typer>=0.12",
  "packaging>=24.1",
  "portalocker>=2.7,<3",
  'tomli>=2.0; python_version < "3.11"',
  'typing-extensions>=4.7; python_version < "3.11"'
]

[project.optional-dependencies]
pretty = ["rich>=13.7"]
mcp = ["mcp>=1.0"]
dev = [
  "pytest>=8.2",
  "mypy>=1.10",
  "ruff>=0.5.0",
  "build>=1.2.1",
  "twine>=5.1",
  "mcp>=1.0"
]

[project.urls]
Homepage = "https://github.com/ImYourBoyRoy/reqsync"
Repository = "https://github.com/ImYourBoyRoy/reqsync"
"Bug Tracker" = "https://github.com/ImYourBoyRoy/reqsync/issues"

[project.scripts]
reqsync = "reqsync.cli:app"
reqsync-mcp = "reqsync.mcp_server:main"

[tool.hatch.version]
source = "vcs"
tag-pattern = "v(?P<version>.*)"

[tool.hatch.build.targets.wheel]
packages = ["src/reqsync"]

[tool.hatch.build.targets.sdist]
include = [
  "src",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "examples/*",
  "docs/*"
]

[tool.ruff]
target-version = "py38"
line-length = 120
extend-exclude = ["dist", "build", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "RUF"]
ignore = ["UP045"]

[tool.ruff.lint.per-file-ignores]
"src/reqsync/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_optional = true
no_implicit_optional = true
show_error_codes = true
pretty = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.reqsync]
path = "requirements.txt"
follow_includes = true
update_constraints = false
policy = "lower-bound"
allow_prerelease = false
keep_local = false
no_upgrade = false
pip_timeout_sec = 900
pip_args = ""
only = []
exclude = []
check = false
dry_run = false
show_diff = false
json_report = ""
backup_suffix = ".bak"
timestamped_backups = true
backup_keep_last = 5
lock_timeout_sec = 15
log_file = ""
verbosity = 0
quiet = false
system_ok = false
allow_hashes = false
allow_dirty = true
last_wins = false
